# 2D-Graphics-Toolkit

./: .gitignore  BezierAlgorithms.cpp  BezierAlgorithms.h  BresenhamLine.cpp  CMakeLists.txt  CircleAlgorithms.h  CircleFillAlgorithms.h  ClippingAlgorithms.cpp  ClippingAlgorithms.h  DDALine.cpp  DirectCircle.cpp  EllipseAlgorithms.h  GraphicsWindow.h  HermiteAlgorithms.cpp  HermiteAlgorithms.h  IterativePolarCircle.cpp  LineAlgorithms.h  MidpointCircle.cpp  ModifiedMidpointCircle.cpp  ParametricLine.cpp  PolarCircle.cpp  PolygonFillAlgorithms.h  README.md  Rectangle.cpp  RectangleAlgorithms.h  Square.cpp  SquareAlgorithms.h  Utils.h  demo.cpp  main.cpp
docs/: Documentation.md
include/: Bezier.h  CardinalSpline.h  CircleAlgorithms.h  CircleFillAlgorithms.h  EllipseAlgorithms.h  FloodFill.h  GraphicsTypes.h  GraphicsWindow.h  Hermite.h  LineAlgorithms.h  Point.h  PolygonAlgorithms.h  PolygonFillAlgorithms.h  Utils.h  Window.h
src/circle/: DirectCircle.cpp  IterativePolarCircle.cpp  MidpointCircle.cpp  ModifiedMidpointCircle.cpp  PolarCircle.cpp
src/circle fill/: FillCircleWithCircles.cpp  FillCircleWithLines.cpp  FillQuarterCircle.cpp
src/curve/: Bezier.cpp  CardinalSpline.cpp  Hermite.cpp
src/elipse/: BresenhamElipse.cpp  DirectElipse.cpp  PolarElipse.cpp
src/flood fill/: NonRecursiveFloodFIll.cpp  RecursiveFloodFill.cpp
src/line/: BresenhamLine.cpp  BresenhamPolygonLine.cpp  DDALine.cpp  HorizontalLine.cpp  ParametricLine.cpp
src/polygon/: Polygon.cpp  Rectangle.cpp  Square.cpp
src/polygon fill/: ConvexFIll.cpp  FillRectangleWithHorizontalBezier.cpp  FillSquareWithVerticalHermite.cpp  NonConvexFill.cpp
src/window/: Buffer.cpp  Draw.cpp  File.cpp  Menu.cpp  Mouse.cpp  Window.cpp
